[package]
name = "calimero-store"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
borsh.workspace = true
camino.workspace = true
eyre.workspace = true
merkletree.workspace = true
rocksdb.workspace = true
sha2.workspace = true
tempdir.workspace = true

calimero-primitives = { path = "../primitives" }
